1. Fix user gap in admin page;

--- a/src/components/adminUser/adminUser.module.css
+++ b/src/components/adminUser/adminUser.module.css
@@ -1,4 +1,8 @@
-.container {}
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 
 .containerOneUser {
     display: flex;
